--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,6 @@
 /* Add your custom extension styling here */
-.statuslabel {
-    padding: 0px 24px;
-}
-
-.popupSubmenu {
-    padding: 5px 10px 0 24px;
-    font-size: smaller;
-    color: blue;
+.menuitemstyle {
+    padding: 0;
+    margin: 0;
+    color: rgb(51, 46, 46);
 }
